Revelation changelog

---------------[ xxxx-xx-xx : 0.4.4 ]---------------

2005-08-03  Erik Grinaker <erikg@codepoet.no>

	* cleaned up applet code

	* moved wrap/ to src/wrap/

2005-07-26  Erik Grinaker <erikg@codepoet.no>

	* applet reruns password dialog when entering wrong password

2005-07-26  Erik Grinaker <erikg@codepoet.no>

	* avoid showing duplicates of non-modal dialogs

	* applet display popups now has name of entry as title

	* don't crash when removing applet from panel

	* added applet options for displaying password and
	copying username to clipboard as chain

	* bumped version to 0.4.4

2005-07-12  Erik Grinaker <erikg@codepoet.no>

	* implemented initial applet searching

	* a few applet ui improvements

2005-07-06  Erik Grinaker <erikg@codepoet.no>

	* improved the applet button behavior

2005-07-01  Erik Grinaker <erikg@codepoet.no>

	* made middle-button click on applet button move applet

2005-06-30  Erik Grinaker <erikg@codepoet.no>

	* moved Timer class from ui module to data module

	* passwords are removed from clipboard after 60 seconds

	* made password labels unselectable when hiding passwords

	* added drag/drop to password labels when hiding passwords

2005-06-28  Erik Grinaker <erikg@codepoet.no>

	* changed default action for applet menu to "show", not "goto"

	* reordered applet prefs for menu action

2005-06-27  Erik Grinaker <erikg@codepoet.no>

	* added frame around applet entry view

2005-06-25  Erik Grinaker <erikg@codepoet.no>

	* added entry view to applet

2005-06-24  Erik Grinaker <erikg@codepoet.no>

	* applet option for copying password to clipboard on doubleclick

2005-06-07  Erik Grinaker <erikg@codepoet.no>

	* applet sets cwd to users homedir on startup

2005-06-06  Erik Grinaker <erikg@codepoet.no>

	* applet automatically reloads file when changed

2005-06-03  Erik Grinaker <erikg@codepoet.no>

	* added global launcher settings to the applet preference dialog

	* applet dialogs use Revelation icon
